Fix pre-release UI bugs v0.6.2
Fix Mozilla Firefox bugs:
Fix issue where scrollbar shows even when Marketing and Sales Analytics
are not selected. This ties in with fix where marketing and sales data
is removed when not in view.
Fix issue stopping any files from being uploaded.

When uploading a document it now says 'Uploading' while it is uploading

Order files in 'Documents & Customers' by date, starting from most
recently uploaded.

Fix flickering js tooltip bug.

Create initial fix for chart.js loading issue based on most popular
solution online - not thoroughly tested.

--- a/src/main/webapp/assets/styles/sp-style.css
+++ b/src/main/webapp/assets/styles/sp-style.css
@@ -124,7 +124,6 @@ td.sp-file-hash {
   margin-right: 40px;
 }
 
-
 .sp-data-widget {
   height: 99px;
 }
@@ -547,7 +546,7 @@ input:checked + .sp-slider:before {
   margin-left: 10px;
 }
 
-.sp-switch-tite__label {
+.sp-switch-title__label {
  margin-top: 6px; 
 }
 .sp-settings-modal-header {
